Added correct dependencies for the PostgresSQL DB deployment and fix the tests accordingly to use H2 DB for testing. Task #305